<?xml version="1.0"?>
<package format="3">
  <name>second_challenge_Kusunose</name>
  <version>0.0.0</version>
  <description>Second Challenge Package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>